@@ -1,3 +1,8 @@
+2006-03-30	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c: Implement "Right Arrow Keyboard Navigation" for
+	  ExoIconView, as requested by Jannis. Bug #1623.
+
 2006-03-21	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Do not
